@@ -1,3 +1,8 @@
+2007-10-29  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/centrality.c (igraph_eigenvector_centrality) : add support for
+	edge weights
+
 2007-10-28  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/f2c/etime_.c
